<resources>
    <!-- General -->
    <string name="app_name">SportVerwaltung</string>

    <string name="action_settings">Settings</string>

    <string name="example_header">HEADER</string>

    <!-- Userdata -->
    <string name="example_username">Nico Kandut</string>
    <string name="hint_username">Username</string>

    <string name="example_email">nico.kandut@gmail.com</string>
    <string name="hint_email">Email</string>

    <string name="hint_password">Password</string>

    <string name="hint_confirmPassword">Confirm password</string>

    <string name="label_rank">Rank:</string>
    <string name="example_rank">3</string>

    <string name="label_points">Points:</string>
    <string name="example_points">300</string>

    <!-- Veranstaltung -->
    <string name="example_eventname">Running with the wolves</string>

    <string name="label_veranstalter">Organizer:</string>
    <string name="example_veranstalter">Kristian INC</string>

    <string name="label_date">Date:</string>
    <string name="example_date">04.10.2018</string>

    <string name="label_location">Place:</string>
    <string name="example_location">Oslo</string>

    <string name="label_teilnehmerCount">Participator:</string>
    <string name="example_teilnehmerCount">25/50</string>

    <!-- Images -->
    <string name="desc_profilePicture">profile picture</string>
    <string name="desc_logo">Sporteventmanager</string>

    <!-- GUI -->

    <string name="text_abmelden">Abandon</string>
    <string name="text_button_teilnehmen">Participate</string>

    <string name="text_button_register">Register</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_button_login">Login</string>
    <string name="text_not_registered_yet">Not registered yet?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_invalidEmail">email not valid</string>
    <string name="error_invalidName">username must be at least 3 characters long</string>
    <string name="error_invalidPassword">password must be at least 6 characters long</string>
    <string name="error_invalidConfirmPassword">passwords do not match</string>


    <string-array name="test_array_all">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>FootBall</item>
        <item>Basket Ball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
    </string-array>


    <string-array name="test_array_done">
        <item>Shuttle Badminton</item>
        <item>FootBall</item>
        <item>Table Tennis</item>
        <item>Hockey</item>
    </string-array>

    <string-array name="test_array_toDo">
        <item>Tennis</item>
        <item>Basket Ball</item>
        <item>Chess</item>
    </string-array>

    <string-array name="test_array_Teilnehmer">
        <item>Angie</item>
        <item>Chrisi</item>
        <item>Nico</item>
        <item>Kristian</item>
    </string-array>

    <string name="title_activity_events">EventsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_sport_event_manager_base">SportEventManagerBaseActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_navigation">Navigation</string>
    <string name="title_other">Other</string>
    <string name="title_profile">Profile</string>
    <string name="title_events">Events</string>
    <string name="title_logout">Logout</string>
    <string name="editText_date">Date:</string>
    <string name="editText_place">Place:</string>
    <string name="editText_participator">Max. Participators:</string>
    <string name="editText_organizer">Organizer:</string>
    <string name="register_success">Registered successfully. Check your inbox for the verification-email.</string>
    <string name="text_recover">Recover</string>
    <string name="textView_rank">Rank:</string>
    <string name="textView_points">Points:</string>
    <string name="pref_header_Account">Account</string>
    <string name="pref_title_change_name">Change Name</string>
    <string name="pref_title_change_email">Change Email</string>
    <string name="pref_default_change_email">monika.ashcraft@gmail.com</string>
    <string name="pref_title_change_password">Change Password</string>
    <string name="pref_default_change_password">monika</string>
    <string name="default_ip">192.168.193.150</string>
    <string name="pref_title_display_ip">IP</string>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />
</resources>
