<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="changeNameKey"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_change_name" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_change_email"
        android:key="changeEmailKey"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_change_email" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_change_password"
        android:key="changePasswordKey"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_change_password" />

</PreferenceScreen>
