<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.cora.sportverwaltung.MyEventsFragment">

        <TextView
            android:id="@+id/textView_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_header"
            android:textAlignment="center"
            android:textSize="40sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/background_light"
            android:textAlignment="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_date"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textView_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="53dp"
                    android:hint="@string/example_date"
                    android:textSize="25sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_location"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textView_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="53dp"
                    android:hint="@string/example_location"
                    android:textSize="25sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_teilnehmerCount"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textView_teilnehmerCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="53dp"
                    android:hint="@string/example_teilnehmerCount"
                    android:textSize="25sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_veranstalter"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textView_veranstalter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="53dp"
                    android:hint="@string/example_veranstalter"
                    android:textSize="25sp" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="match_parent"
            android:layout_height="191dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:hint="@string/example_description"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/text_abmelden" />

</LinearLayout>
